# Youtube-Summarizer

./: Button.h  CMakeLists.txt  ChatGPTClient.h  README.md  TextBox.cpp  TranscriptStealer.h  main.cpp  openai.hpp
